Fixed header logo problem on mobile

--- a/assets/scss/shared/_header.scss
+++ b/assets/scss/shared/_header.scss
@@ -3,6 +3,7 @@
     img {
       width: auto;
       max-height: calc(1.4rem + .6vw);
+      min-height: 32px;
     }
   }
 }
